--- a/src/page/BuyRecord.scss
+++ b/src/page/BuyRecord.scss
@@ -29,5 +29,18 @@
         border: 2px solid #a0a0a0;
         margin-top: 15px;
         padding: 15px;
+
+        .recipient-info {
+            @include md {
+                margin-top: 20px;
+            }
+        }
+
+        .total-price {
+            @include md {
+                margin-top: 20px;
+            }
+        }
+
     }
 }
