--- a/src/page/LandingPage.scss
+++ b/src/page/LandingPage.scss
@@ -10,6 +10,12 @@
     }
 }
 
+@mixin sm {
+    @media (max-width: 576px) {
+        @content;
+    }
+}
+
 
 .LandingPage {
     font-family: Noto Sans CJK TC;
@@ -23,13 +29,16 @@
     .section {
         max-height: 100vh;
         height: 100vh;
+        overflow: hidden;
+
+        .fp-tableCell {
+            max-height: 100vh;
+            height: 100vh;
+            overflow: hidden;
+        }
     }
 
-    .slider-img {
-        height: 100vh;
-        width: 100vw;
-        object-fit: cover;
-    }
+
 
 
     .transition {
@@ -38,6 +47,7 @@
 
     .theVision {
         max-height: 100vh;
+        height: 100vh;
 
         .transition {
             transition: width 2s;
@@ -59,19 +69,55 @@
             .imgarea {
                 height: 100vh;
                 max-height: 100vh;
+                overflow: hidden;
 
+                .fp-slides {
+                    height: 100vh;
+                    max-height: 100vh;
+                    overflow: hidden;
 
-                .carousel {
-                    .carousel-caption {
-                        bottom: 35px;
+                    .carousel {
+                        height: 100vh;
                         max-height: 100vh;
-                    }
+                        overflow: hidden;
 
-                    .carousel-indicators {
-                        bottom: 30px;
+                        .carousel-indicators {
+                            bottom: 45px;
+
+                            @include md {
+                                bottom: 85px;
+                            }
+                        }
+
+                        .carousel-caption {
+                            bottom: 55px;
+
+                            @include md {
+                                bottom: 95px;
+                            }
+                        }
+
+
+                        .carousel-inner {
+                            height: 100vh;
+                            max-height: 100vh;
+
+                            .carousel-item {
+                                height: 100vh;
+                                max-height: 100vh;
+                                overflow: hidden;
+
+                                .slider-img {
+                                    height: 100vh;
+                                    width: 100vw;
+                                    max-height: 100vh;
+                                    object-fit: cover;
+                                }
+                            }
+                        }
+
                     }
                 }
-
             }
         }
 
@@ -99,37 +145,56 @@
     .videopage {
         color: #000000;
         height: 100vh;
+        max-height: 100vh;
+        overflow: hidden;
         // margin-top: -40px;
 
         .content {
             height: 100%;
+            max-height: 100vh;
+            overflow: hidden;
 
             .col {
                 padding: 0;
+                max-height: 100vh;
+                overflow: hidden;
+                height: 100vh;
 
-                .forpose {
-                    position: relative;
+                .page2-textArea {
+                    max-height: 100vh;
+                    overflow: hidden;
+                    height: 100vh;
 
-                    .title {
-                        position: absolute;
-                        top: 43%;
-                        width: 100%;
+                    .forpose {
 
-                        h3 {
-                            color: #ffffff;
-                            text-align: center;
-                            font-size: 3rem;
+                        position: relative;
+                        max-height: 100vh;
+                        overflow: hidden;
+
+                        .title {
+                            position: absolute;
+                            top: 50%;
+                            transform: translateY(-50%);
+                            width: 100%;
+
+                            h3 {
+                                color: #ffffff;
+                                text-align: center;
+                                font-size: 3rem;
 
 
+                            }
                         }
-                    }
 
-                    video {
-                        height: 100vh;
-                        width: 100vw;
-                        object-fit: cover;
-                    }
+                        video {
+                            max-height: 100vh;
+                            overflow: hidden;
+                            height: 100vh;
+                            width: 100vw;
+                            object-fit: cover;
+                        }
 
+                    }
                 }
             }
 
@@ -170,11 +235,14 @@
 
     .aboutus {
         color: #000000;
+        max-height: 100vh;
+        overflow: hidden;
         height: 100vh;
-        margin-top: -40px;
 
         .content {
             height: 100%;
+            max-height: 100vh;
+            overflow: hidden;
 
             h2,
             img,
@@ -184,35 +252,40 @@
                 transition: 3s;
             }
 
-            .area {}
+            .page3-textArea {
+
+
+                .page2-title {
+                    font-size: 25pt;
+
+                    span {
+                        background-color: #FFBC60;
+                        border-radius: 3.5rem;
+                    }
+
+                    @include md {
+                        font-size: 18pt;
+                    }
+                }
+
+                .about-describe {
+                    width: 510px;
+                    height: 110px;
+
+                    @include md {
+                        width: auto;
+                        height: auto;
+                    }
+                }
+
+
+            }
 
 
         }
 
 
-        .page3-textArea {
 
-
-            .page2-title {
-                font-size: 25pt;
-
-                span {
-                    background-color: #FFBC60;
-                    border-radius: 3.5rem;
-                }
-
-                @include md {
-                    font-size: 18pt;
-                }
-            }
-
-            .aboutArticle {
-                width: 70%;
-                font-size: 18pt;
-                line-height: 2rem;
-                color: #818181;
-            }
-        }
 
 
     }
@@ -221,10 +294,14 @@
     .product {
         color: #000000;
         height: 100vh;
-        margin-top: -40px;
+        max-height: 100vh;
+        overflow: hidden;
+
 
         .content {
             height: 100%;
+            max-height: 100%;
+            overflow: hidden;
 
             h2,
             .col {
@@ -237,7 +314,13 @@
                 @include md {
                     font-size: 18pt;
                     margin-bottom: 0;
-                    margin-top: 4rem;
+                    margin-top: 2.75rem;
+                }
+
+                @include sm {
+                    font-size: 18pt;
+                    margin-bottom: 0;
+                    margin-top: 0.5rem;
                 }
             }
 
@@ -290,7 +373,9 @@
     .contact-page {
         color: #000000;
         height: 100vh;
-        margin-top: -40px;
+        max-height: 100vh;
+        overflow: hidden;
+
 
         .content {
             height: 100%;
@@ -302,7 +387,7 @@
 
                 @include md {
                     font-size: 18pt;
-                    margin-top: 3rem;
+                    margin-top: 0rem;
                 }
             }
 
@@ -383,8 +468,7 @@
             .content {
 
                 h2,
-                .col,
-                    {
+                .col {
                     opacity: 1;
                     transform: translate(0, -10px);
                     transition: 5s;
@@ -393,6 +477,25 @@
         }
     }
 }
+
+// .fp-viewing-fourthPage {
+//     .LandingPage {
+//         transition: 3s;
+
+//         .product {
+//             .content {
+
+//                 h2,
+//                 .col,
+//                     {
+//                     opacity: 1;
+//                     transform: translate(0, -10px);
+//                     transition: 5s;
+//                 }
+//             }
+//         }
+//     }
+// }
 
 body.clickednow {
     .LandingPage {
